<resources>
    <string name="app_name">LastMileProto</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- strings.xml -->
    <string name="last_mile_d">

Last Mile Delivery
</string>

    <string name="courier">

Courier
</string>

    <string name="resident">

Resident
</string>

    <string name="courier_log">

Courier Login
</string>

    <string name="button_submit">

Submit
</string>

    <string name="resident_log">

Resident Login
</string>

    <string name="verification_num">

Verification Number
</string>

    <string name="email">

Email
</string>

    <string name="password">

Password
</string>

    <string name="button_back">

Back
</string>

    <string name="button_next">

Next
</string>

    <string name="button_logout">

Logout
</string>

    <string name="text_LoremTest">

Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consectetur at lacus eget dapibus. Nunc bibendum porta diam, nec tristique velit fermentum eget. Nullam tempus gravida ligula sollicitudin ultricies. Proin tincidunt porttitor interdum. Nam pharetra lectus eget efficitur feugiat. Morbi varius magna eu nulla mollis pharetra. Nulla mauris enim, sagittis in purus in, tristique mattis ar
</string>

    <string name="button_reattempt">

Reattempt Needed
</string>

    <string name="button_delivery_successful">

Delivery Successful
</string>

    <string name="button_delivery_locationNotfound">

No Access
</string>

    <string name="button_delivery_residentAbsent">

Res. Abs.
</string>

    <string name="button_delivery_badAddress">

Bad Add.
</string>

    <string name="button_delivery_Refused">

Refused
</string>

    <string name="button_delivery_Animal">

Animal
</string>

    <string name="button_delivery_Inaccess">

Inaccess.
</string>

    <string name="button_reattemptReason">

Reattempt Reason:
</string>

    <string name="button_delivery_specLocnotfound">

Delivery Spec Not Found
</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>