<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".courier.DeliveryConfirmation">

    <Button
        android:id="@+id/button_deliveryConfirm"
        style="@style/button_blue"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="152dp"
        android:backgroundTint="@color/faded_orange"
        android:text="@string/button_delivery_specLocnotfound" />

    <Button
        android:id="@+id/button_deliveryReattempt"
        style="@style/button_blue"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="86dp"
        android:backgroundTint="@color/green"
        android:text="@string/button_delivery_successful" />

    <Button
        android:id="@+id/button_deliveryDiffloc"
        style="@style/button_blue"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="21dp"
        android:layout_marginTop="218dp"
        android:backgroundTint="@color/red"
        android:text="@string/button_reattempt" />

    <Button
        android:id="@+id/button_confirmLogout"
        style="@style/button_blue"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_logout" />

    <TextView
        android:id="@+id/text_reattemptReason"
        style="@style/instruction_text"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="277dp"
        android:text="@string/button_reattemptReason" />

    <Button
        android:id="@+id/button_reattempt1"
        style="@style/button_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="321dp"
        android:text="@string/button_delivery_residentAbsent" />

    <Button
        android:id="@+id/button_reattempt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="147dp"
        android:layout_marginTop="321dp"
        style="@style/button_blue"
        android:text="@string/button_delivery_locationNotfound" />

    <Button
        android:id="@+id/button_reattempt3"
        style="@style/button_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="265dp"
        android:layout_marginTop="320dp"
        android:text="@string/button_delivery_badAddress" />

    <Button
        android:id="@+id/button_reattempt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="390dp"
        style="@style/button_blue"
        android:text="@string/button_delivery_Refused" />


    <Button
        android:id="@+id/button_reattempt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="147dp"
        android:layout_marginTop="390dp"
        style="@style/button_blue"
        android:text="@string/button_delivery_Animal" />
    <Button
        android:id="@+id/button_reattempt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="265dp"
        android:layout_marginTop="390dp"
        style="@style/button_blue"
        android:text="@string/button_delivery_Inaccess" />

    <Button
        android:id="@+id/button_delivery_submit"
        style="@style/button_blue"
        android:layout_width="375dp"
        android:layout_height="49dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="665dp"
        android:text="@string/button_submit" />


</RelativeLayout>