<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".courier.InfoDisplay">


    <Button
        android:id="@+id/button_infodispBack"
        style="@style/button_blue"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="671dp"
        android:text="@string/button_back" />

    <Button
        android:id="@+id/button_infodispNext"
        style="@style/button_blue"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="257dp"
        android:layout_marginTop="673dp"
        android:text="@string/button_next" />

    <Button
        android:id="@+id/button_infodispLogout"
        style="@style/button_blue"
        android:layout_width="137dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="17dp"
        android:text="@string/button_logout" />

    <ImageView
        android:id="@+id/image_packagelocImg"
        android:layout_width="412dp"
        android:layout_height="280dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="66dp"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/text_packagelocText"
        android:layout_width="390dp"
        android:layout_height="300dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="13dp"
        android:layout_marginTop="363dp"
        android:gravity="top"
        android:text="@string/text_LoremTest"
        android:textAppearance="@style/courier_HiVis" />


</RelativeLayout>